[package]
name        = "neuroptics"
version     = "0.1.0"
edition.workspace     = true
authors.workspace     = true
license     = "AGPL-3.0"
repository  = "https://github.com/RocinRykor/neuroptics"

[lib]
name = "neuroptics"
path = "src/lib.rs"

[[bin]]
name = "neuroptics"
path = "src/main.rs"

[dependencies]
cortex     = { workspace = true }
commlink   = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
